syntax = "proto3";

package userService;
option go_package = ".;userService";

service UserService {
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}

message GetUserInfoRequest {
  string token = 1;
}

message GetUserInfoResponse {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string type = 4;
  string role = 5;
  string avatar = 6;
}